Se tiene logica parcial vamos a realizar ciclo while

--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
         <h2>Adivina el nombre de una persona !</h2>
 
         <form class="entrada__palabra" action="">
-            <input type="text" value="letra1">
-            <input type="text" value="letra2">
-            <input type="text" value="letra3">
-            <input type="text" value="letra4">
-            <input type="text" value="letra5">
 
+            
             <button type="submit">Intento</button>
         </form>
 
@@ -44,12 +40,12 @@
 
     <div class="box__numeroIntentos">
 
-        <p>Numero de intentos : </p>
+        <p id = "palabraescogida"></p>
 
-        <p class="contador">0</p>
+        <p id="caja__de--intentos">Numero de intentos : </p>
 
     </div>
 
-<script src=""></script>
+    <script src="script.js"></script>
 </body>
 </html>
