Se termina la parte fuerte de la logica del juego

--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
 
         <h2>Adivina la palabra secreta !</h2>
 
-        <form class="entrada__palabra" action="">
-
-
-           
-        </form>
+        <form class="entrada__palabra" action=""></form>
         
-        <input type="text" name="" id="unicaEntradaUsuario">
+        <input id="unicoEntradaUsuario" class="intentoDeUsuario" type="text" name="" value="">
         <button type="button" id="probarLetra">Intentar</button>
 
     </div>
